force-app/main/default/objects/User/fields/ccSabbatic__Status__c.field-meta.xml
<CustomField>
    <fullName>ccSabbatic__Status__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Activar en Sabbatic</label>
    <type>Checkbox</type>
</CustomField>