force-app/main/default/objects/User/fields/ccSabbatic__UserID__c.field-meta.xml
<CustomField>
    <fullName>ccSabbatic__UserID__c</fullName>
    <externalId>true</externalId>
    <label>ID Usuario Sabbatic</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>