force-app/main/default/objects/User/fields/Date_joined__c.field-meta.xml
<CustomField>
    <fullName>Date_joined__c</fullName>
    <label>Date joined</label>
    <type>Date</type>
</CustomField>