force-app/main/default/objects/User/fields/User_Acronym__c.field-meta.xml
<CustomField>
    <fullName>User_Acronym__c</fullName>
    <label>User Acronym</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>